compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__pattern_matching_on_32_float_plus_infinity_still_reachable_2.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 2305
expression: "\npub fn go(x) {\n  case x {\n    <<_:32-float>> -> \"Float\"\n    <<0x7f80:16, 0x0000:16>> -> \"+Infinity\"\n    _ -> \"Other\"\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<_:32-float>> -> "Float"
    <<0x7f80:16, 0x0000:16>> -> "+Infinity"
    _ -> "Other"
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySliceToFloat } from "../gleam.mjs";

export function go(x) {
  if (x.bitSize === 32) {
    if (Number.isFinite(bitArraySliceToFloat(x, 0, 32, true))) {
      return "Float";
    } else if (
      x.byteAt(0) === 127 && x.byteAt(1) === 128 &&
      x.byteAt(2) === 0 && x.byteAt(3) === 0
    ) {
      return "+Infinity";
    } else {
      return "Other";
    }
  } else {
    return "Other";
  }
}
